--- a/Uinsure.TechnicalTest/Uinsure.TechnicalTest.API.csproj
+++ b/Uinsure.TechnicalTest/Uinsure.TechnicalTest.API.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Uinsure.TechnicalTest.Application\Uinsure.TechnicalTest.Application.csproj" />
   </ItemGroup>
 
 </Project>
