Update schema/config and ignore DB designer artifacts

--- a/Uinsure.TechnicalTest.Domain/Uinsure.TechnicalTest.Domain.csproj
+++ b/Uinsure.TechnicalTest.Domain/Uinsure.TechnicalTest.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Entities\Policyholder.cs~RF754ccf.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Uninsure.TechnicalTest.Common.SharedKernal\Uinsure.TechnicalTest.Common.SharedKernal.csproj" />
   </ItemGroup>
 
