--- a/Uinsure.TechnicalTest.API/Uinsure.TechnicalTest.API.csproj
+++ b/Uinsure.TechnicalTest.API/Uinsure.TechnicalTest.API.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
+    <Content Update="Configuration\*.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
