--- a/Uinsure.TechnicalTest.Application/Uinsure.TechnicalTest.Application.csproj
+++ b/Uinsure.TechnicalTest.Application/Uinsure.TechnicalTest.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Uinsure.TechnicalTest.Domain\Uinsure.TechnicalTest.Domain.csproj" />
   </ItemGroup>
 
