--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       MSSQL_SA_PASSWORD: ${MSSQL_SA_PASSWORD:-YourStrong!Passw0rd}
     volumes:
-      - ./docker/db:/db:ro
+      - ./Uinsure.TechnicalTest.Database:/db:ro
     command:
       - /bin/bash
       - -c
@@ -29,7 +29,24 @@ services:
           echo "waiting for sql server..."
           sleep 2
         done
-        /opt/mssql-tools/bin/sqlcmd -S db -U sa -P "$$MSSQL_SA_PASSWORD" -i /db/init.sql
+        /opt/mssql-tools/bin/sqlcmd -S db -U sa -P "$$MSSQL_SA_PASSWORD" -Q "IF DB_ID(N'UinsureTechnicalTest') IS NULL CREATE DATABASE [UinsureTechnicalTest];"
+        for f in /db/dbo/tables/Policies.sql /db/dbo/tables/Policyholders.sql /db/dbo/tables/Properties.sql /db/dbo/tables/Payments.sql; do
+          /opt/mssql-tools/bin/sqlcmd -S db -U sa -P "$$MSSQL_SA_PASSWORD" -d UinsureTechnicalTest -i "$$f"
+        done
+
+  api:
+    build:
+      context: .
+      dockerfile: Uinsure.TechnicalTest.API/Dockerfile
+    container_name: uinsure-api
+    depends_on:
+      - db
+      - db-init
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__PolicyContext: "Data Source=db,1433;Initial Catalog=UinsureTechnicalTest;MultipleActiveResultSets=True;User id=sa;Password=${MSSQL_SA_PASSWORD:-YourStrong!Passw0rd};TrustServerCertificate=True"
+    ports:
+      - "5019:8080"
 
 volumes:
   mssql-data:
