cancel policy implemented

--- a/Uinsure.TechnicalTest.API/Configuration/ApplicationSettings.json
+++ b/Uinsure.TechnicalTest.API/Configuration/ApplicationSettings.json
@@ -1,5 +1,6 @@
 {
   "PolicySettings": {
+    "CoolingOffPeriodDays": 14,
     "MaxStartDateAdvanceDays": 60,
     "MaxPolicyholders": 3,
     "MaxPostcodeLength": 8
