Policy renewal added and acceptance tested

--- a/Uinsure.TechnicalTest.API/Configuration/ApplicationSettings.json
+++ b/Uinsure.TechnicalTest.API/Configuration/ApplicationSettings.json
@@ -3,6 +3,7 @@
     "CoolingOffPeriodDays": 14,
     "MaxStartDateAdvanceDays": 60,
     "MaxPolicyholders": 3,
-    "MaxPostcodeLength": 8
+    "MaxPostcodeLength": 8,
+    "RenewalWindowDays": 30
   }
 }
