basic tracing and logging to be viewd in Aspire

--- a/Uinsure.TechnicalTest.API/Configuration/ApplicationSettings.json
+++ b/Uinsure.TechnicalTest.API/Configuration/ApplicationSettings.json
@@ -1,4 +1,8 @@
 {
+  "Otlp": {
+    "Host": "localhost",
+    "Port": 4317
+  },
   "PolicySettings": {
     "CoolingOffPeriodDays": 14,
     "MaxStartDateAdvanceDays": 60,
