--- a/Uinsure.TechnicalTest.API/Uinsure.TechnicalTest.API.csproj
+++ b/Uinsure.TechnicalTest.API/Uinsure.TechnicalTest.API.csproj
@@ -9,7 +9,20 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.1" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
+	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
+	<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.15.0" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.15.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.15.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.15.0-beta.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.15.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.15.0" />
+	<PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+	<PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+	<PackageReference Include="Serilog.Enrichers.Process" Version="3.0.0" />
+	<PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+	<PackageReference Include="Serilog.Exceptions" Version="8.0.0" />
+	<PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.0" />
+	<PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
